--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=BootMongoDBProject01_MongoReporsitory_CURDOperations
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=Retail_Store
+#spring.data.mongodb.username=admin
+#spring.data.mongodb.password=password
